fixing lib test using angular cli

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "test:lib": "jasmine-ts \"./lib/**/*.spec.ts\""
+    "test:lib": "ng test --app=lib"
   },
   "private": true,
   "dependencies": {
@@ -36,9 +36,9 @@
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-spec-reporter": "^4.2.1",
     "jasmine-ts": "^0.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
